--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -11,6 +11,7 @@ margin-top:70px;
   margin-left: 70px;
   float: left;
   width: 60px;
+  z-index: 2000;
 }
 
 .Navi {
@@ -19,7 +20,29 @@ margin-top:70px;
   font-family: 'Nunito', sans-serif;
   font-variant: small-caps;
   letter-spacing: 0.1em;
+  z-index: 2000;
+}
 
+.wrapper{
+  position: absolute;
+  top: 0;
+  clear: both;
+  width: auto;
+  z-index: -2000;
+}
+
+.background-video{
+width: 100%;
+height: 100%;
+  }
+
+.textfeld{
+  display: block;
+}
+p{
+  font-family: 'Nunito', sans-serif; 
+  text-align: center;
+  color: gray;
 }
 
 a:link {
