--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -43,7 +43,7 @@ width: 100%;
 height: 100%;
   }
 
-.textfeld{
+#textfeld{
   align-items: center;
   height: 450px;
 
@@ -67,10 +67,12 @@ h2{
 }
 p{
   margin-top: 10%;
+  margin-right: 25%;
+  margin-left: 25%;
   display: block;
   vertical-align: middle;
   font-family: 'Nunito', sans-serif;
-  text-align: center;
+  text-align: left;
   color: gray;
 }
 
