--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -17,6 +17,12 @@ display: block;
   width: 60px;
   z-index: 2000;
 }
+.logoJW path {
+  fill: gray;
+}
+.logoJW path:hover{
+  fill: white;
+}
 
 .Navi {
   margin-top: 0px;
@@ -42,13 +48,32 @@ display: block;
 width: 100%;
 height: 100%;
   }
-
-#textfeld{
+#work{
+  display: block;
+  clear: both;
+  width: 100%;
+  height: 1px;
+}
+#about{
+  display: block;
+  clear: both;
+  width: 100%;
+  height: 1px;
+}
+#contact{
+  display: block;
+  clear: both;
+  width: 100%;
+  height: 1px;
+}
+.textfeld{
+  align-items: center;
+  height: 600px;
+}
+.letztestextfeld{
   align-items: center;
   height: 450px;
-
 }
-
 .footer{
   position:absolute;
   bottom: 0;
@@ -98,5 +123,165 @@ opacity: 0%
 
 ul {
     list-style-type: none;
+}
 
+
+
+@import url(https://fonts.googleapis.com/css?family=Lato:100,300,400);
+
+input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
+  font-size: 0.875em;
+}
+
+input:focus::-webkit-input-placeholder, textarea:focus::-webkit-input-placeholder {
+  color: #bbb5af;
+}
+
+input::-moz-placeholder, textarea::-moz-placeholder {
+  color: #aca49c;
+  font-size: 0.875em;
+}
+
+input:focus::-moz-placeholder, textarea:focus::-moz-placeholder {
+  color: #bbb5af;
+}
+
+input::placeholder, textarea::placeholder {
+  color: #aca49c;
+  font-size: 0.875em;
+}
+
+input:focus::placeholder, textarea::focus:placeholder {
+  color: #bbb5af;
+}
+
+input::-ms-placeholder, textarea::-ms-placeholder {
+  color: #aca49c;
+  font-size: 0.875em;
+}
+
+input:focus::-ms-placeholder, textarea:focus::-ms-placeholder {
+  color: #bbb5af;
+}
+
+/* on hover placeholder */
+
+input:hover::-webkit-input-placeholder, textarea:hover::-webkit-input-placeholder {
+  color: #e2dedb;
+  font-size: 0.875em;
+}
+
+input:hover:focus::-webkit-input-placeholder, textarea:hover:focus::-webkit-input-placeholder {
+  color: #cbc6c1;
+}
+
+input:hover::-moz-placeholder, textarea:hover::-moz-placeholder {
+  color: #e2dedb;
+  font-size: 0.875em;
+}
+
+input:hover:focus::-moz-placeholder, textarea:hover:focus::-moz-placeholder {
+  color: #cbc6c1;
+}
+
+input:hover::placeholder, textarea:hover::placeholder {
+  color: #e2dedb;
+  font-size: 0.875em;
+}
+
+input:hover:focus::placeholder, textarea:hover:focus::placeholder {
+  color: white;
+}
+
+input:hover::placeholder, textarea:hover::placeholder {
+  color: white;
+  font-size: 0.875em;
+}
+
+input:hover:focus::-ms-placeholder, textarea:hover:focus:-ms-placeholder {
+  color: gray;
+}
+
+body {
+  font-family: 'Nunito', sans-serif;
+  color: gray;
+}
+
+#form {
+  position: relative;
+  width: 500px;
+  margin: 50px auto 100px auto;
+}
+
+input {
+  font-family: 'Nunito', sans-serif;
+  font-size: 0.875em;
+  width: 470px;
+  height: 50px;
+  padding: 0px 15px 0px 15px;
+
+  background: transparent;
+  outline: none;
+  color: white;
+
+  border: solid 1px gray;
+  border-bottom: none;
+
+  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+}
+
+input:hover {
+  background: gray;
+  color: white;
+}
+
+textarea {
+  width: 470px;
+  max-width: 470px;
+  height: 110px;
+  max-height: 110px;
+  padding: 15px;
+
+  background: transparent;
+  outline: none;
+
+  color: white;
+  font-family: 'Nunito', sans-serif;
+  font-size: 0.875em;
+
+  border: solid 1px gray;
+
+  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+}
+
+textarea:hover {
+  background: gray;
+  color: white;
+}
+
+#submit {
+  width: 500px;
+
+  padding: 0;
+  margin: 0px 0px 0px 0px;
+
+  font-family: 'Nunito', sans-serif;
+  font-size: 0.835em;
+  color: gray;
+
+  outline:none;
+  cursor: pointer;
+
+  border: solid 1px gray;
+  border-top: none;
+}
+
+#submit:hover {
+  color: white;
 }
