--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -38,7 +38,7 @@ display: block;
 }
 
 .wrapper{
-  align: center;
+  text-align: center;
   position: absolute;
   top: 0;
   clear: both;
@@ -100,6 +100,7 @@ min-width: 500px;
 }
 .footer {
   position: absolute;
+  text-align: center;
   bottom: 0;
   width: auto;
   z-index: -2000;
@@ -115,6 +116,12 @@ h2{
   margin-top: 70px;
 }
 p{
+  display: block;
+  font-family: 'Nunito', sans-serif;
+  color: gray;
+}
+
+.textfeld p{
   margin-top: 10%;
   margin-right: 28%;
   margin-left: 28%;
@@ -165,7 +172,7 @@ ul {
 input {
   font-family: 'Nunito', sans-serif;
   font-size: 0.875em;
-  width: 350px;
+  width: 346px;
   height: 50px;
   padding: 0px 15px 0px 15px;
 
@@ -173,7 +180,7 @@ input {
   outline: none;
   color: gray;
 
-  border: solid 1px gray;
+  border: solid 3px gray;
   border-bottom: none;
 
   transition: all 0.3s ease-in-out;
@@ -183,7 +190,7 @@ input {
 }
 
 textarea {
-  width: 350px;
+  width: 346px;
   max-width: 470px;
   height: 110px;
   max-height: 110px;
@@ -196,16 +203,14 @@ textarea {
   font-family: 'Nunito', sans-serif;
   font-size: 0.875em;
 
-  border: solid 1px gray;
-
+  border: solid 3px gray;
 }
-
 
 #submit {
   width: 380px;
 
   padding: 0;
-  margin: 0px 0px 0px 0px;
+  margin: -1px 0px 0px 0px;
 
   font-family: 'Nunito', sans-serif;
   font-size: 0.875em;
@@ -214,10 +219,16 @@ textarea {
   outline:none;
   cursor: pointer;
 
-  border: solid 1px gray;
+  border: solid 3px gray;
   border-top: none;
 }
 
 #submit:hover {
   color: white;
+}
+
+.socialmediaicons{
+  margin-left: 75px;
+  margin-right: 75px;
+  margin-bottom: 20px; 
 }
