--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -69,6 +69,7 @@ min-width: 500px;
   min-width: 500px;
 }
 .Projects{
+  position: relative;
   display: inline-block;
   height: 115px;
   width: 350px;
@@ -76,9 +77,46 @@ min-width: 500px;
   margin: 5px;
   background-color: gray;
   max-width: 1920px;
-
-
 }
+
+
+.image {
+  opacity: 1;
+  width: 100%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%)
+}
+
+.Projects:hover .image {
+  opacity: 0.3;
+}
+
+.Projects:hover .middle {
+  opacity: 1;
+}
+
+.text {
+  font-family: 'Teko', sans-serif;
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: 0.04em;
+  color: white;
+  font-size: 28px;
+  padding: 8px;
+}
+
+
 #about{
   display: block;
   clear: both;
