--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -74,7 +74,9 @@ min-width: 500px;
   height: 115px;
   width: 350px;
   min-width: 200px;
-  margin: 5px;
+  margin-right: 7px;
+  margin-left: 7px;
+  margin-bottom: 18px;
   background-color: gray;
   max-width: 1920px;
 }
