--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -133,14 +133,17 @@ min-width: 500px;
 }
 .textfeld{
   align: center;
-  height: 600px;
+  height: 100vh;
 }
 .letztestextfeld{
   align: center;
-  height: 600px;
+  height: 100vh;
 }
 .footer {
-  margin-bottom: 25px;
+  position: relative;
+  margin-top: 10%;
+  margin-bottom: 5%;
+  bottom: 0;
 
 }
 
@@ -268,9 +271,9 @@ textarea {
 }
 
 .socialmediaicons{
+
   margin-left: 75px;
   margin-right: 75px;
-  margin-bottom: 20px;
 }
 .fotos{
   display: block;
