--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -80,6 +80,11 @@ min-width: 500px;
   background-color: gray;
   max-width: 1920px;
 }
+.allworks{
+  border: 5px;
+  border-color: gray;
+
+}
 
 
 .image {
@@ -131,7 +136,13 @@ min-width: 500px;
   width: 100%;
   height: 1px;
 }
-.textfeld{
+
+.erstestextfeld{
+  align: center;
+  min-height: 135vh;
+  max-height: 150vh;
+}
+.mittlerestextfeld{
   align: center;
   height: 100vh;
 }
@@ -139,6 +150,14 @@ min-width: 500px;
   align: center;
   height: 100vh;
 }
+.textfeld{
+  align: center;
+  height: 100vh;
+}
+.textfeld p{
+  text-align: center;
+}
+
 .footer {
   position: relative;
   margin-top: 10%;
@@ -162,7 +181,7 @@ p{
   color: gray;
 }
 
-.textfeld p{
+.mittlerestextfeld p{
   margin-top: 10%;
   margin-right: 28%;
   margin-left: 28%;
